--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,11 +1,11 @@
 appname = gopub
-httpport = 8000
+httpport = 8001
 runmode = dev
 
 # 数据库配置
 db.host = 127.0.0.1
 db.user = root
-db.password = "" 
+db.password = "root" 
 db.port = 3306
 db.name = gopub
 db.prefix = "t_"
@@ -19,7 +19,7 @@ mail.user = username
 mail.password = your password
 
 # 数据目录设置
-data_dir = /data/golang/src/gopub/data
+data_dir = /home/nana/data/gopub
 
 # 日志文件
 log_file = logs/error.log
